--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="card text-white bg-secondary my-5 py-4 text-center">
             <div class="card-body">
                 <p class="text-white m-0">Senior Photographs, family photographs, just for fun photos, business photos,
-                    and anything that gets the creatviity flowing!</p>
+                    and anything that gets the creativity flowing!</p>
             </div>
         </div>
         <!-- Content Row-->
