--- a/resume.html
+++ b/resume.html
@@ -25,9 +25,9 @@
         <li>Experience
             <ul>
                 <li>Weddings</li>
-                <li>Senior Photoshoots</li>
+                <li>Senior Pphotoshoots</li>
                 <li>Creative for fun photoshoots</li>
-                <li>family Photoshoots</li>
+                <li>Family photoshoots</li>
             </ul>
             </li>
         </li>
